--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,8 @@
 "version": "1.0.0",
 "icons": { "48": "assets/icon.png" },
 "permissions": ["storage", "activeTab", "scripting"],
-"host_permissions": ["https://chat.openai.com/*","https://chat.google.com/*","https://*.perplexity.ai/*","https://*.google.com/*","https://*.openai.com/*"],
+"host_permissions": ["https://generativelanguage.googleapis.com/*"],
 "action": { "default_popup": "src/popup.html", "default_title": "Prompt Enhancer" },
-"options_page": "src/options.html",
 "background": { "service_worker": "src/service_worker.js" },
 "content_scripts": [
 {
